compiler/mesh-parser/tests/snapshots/parser_tests__closure_wildcard_param.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn _ -> 42 end\")"
---
SOURCE_FILE@0..14
  CLOSURE_EXPR@0..14
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    PARAM_LIST@3..4
      PARAM@3..4
        WILDCARD_PAT@3..4
          IDENT@3..4 "_"
    WHITESPACE@4..5 " "
    ARROW@5..7 "->"
    WHITESPACE@7..8 " "
    BLOCK@8..10
      LITERAL@8..10
        INT_LITERAL@8..10 "42"
    WHITESPACE@10..11 " "
    END_KW@11..14 "end"
  EOF@14..14 ""
