compiler/mesh-parser/tests/snapshots/parser_tests__comparison_eq.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"a == b\")"
---
SOURCE_FILE@0..6
  BINARY_EXPR@0..6
    NAME_REF@0..1
      IDENT@0..1 "a"
    WHITESPACE@1..2 " "
    EQ_EQ@2..4 "=="
    WHITESPACE@4..5 " "
    NAME_REF@5..6
      IDENT@5..6 "b"
  EOF@6..6 ""
