compiler/mesh-parser/tests/snapshots/parser_tests__comparison_lt_with_arithmetic.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"x < y + 1\")"
---
SOURCE_FILE@0..9
  BINARY_EXPR@0..9
    NAME_REF@0..1
      IDENT@0..1 "x"
    WHITESPACE@1..2 " "
    LT@2..3 "<"
    WHITESPACE@3..4 " "
    BINARY_EXPR@4..9
      NAME_REF@4..5
        IDENT@4..5 "y"
      WHITESPACE@5..6 " "
      PLUS@6..7 "+"
      WHITESPACE@7..8 " "
      LITERAL@8..9
        INT_LITERAL@8..9 "1"
  EOF@9..9 ""
