compiler/mesh-parser/tests/snapshots/parser_tests__def_keyword.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"def greet(name) do\\n  \\\"hello\\\"\\nend\")"
---
SOURCE_FILE@0..32
  FN_DEF@0..32
    DEF_KW@0..3 "def"
    WHITESPACE@3..4 " "
    NAME@4..9
      IDENT@4..9 "greet"
    PARAM_LIST@9..15
      L_PAREN@9..10 "("
      PARAM@10..14
        IDENT@10..14 "name"
      R_PAREN@14..15 ")"
    WHITESPACE@15..16 " "
    DO_KW@16..18 "do"
    BLOCK@18..29
      NEWLINE@18..19 "\n"
      WHITESPACE@19..21 "  "
      STRING_EXPR@21..28
        STRING_START@21..22 "\""
        STRING_CONTENT@22..27 "hello"
        STRING_END@27..28 "\""
      NEWLINE@28..29 "\n"
    END_KW@29..32 "end"
  EOF@32..32 ""
