compiler/mesh-parser/tests/snapshots/parser_tests__error_fn_missing_name.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"fn do end\")"
---
SOURCE_FILE@0..9
  CLOSURE_EXPR@0..9
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    DO_KW@3..5 "do"
    WHITESPACE@5..6 " "
    BLOCK@6..6
    END_KW@6..9 "end"
  EOF@9..9 ""
