compiler/mesh-parser/tests/snapshots/parser_tests__error_if_missing_end.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"if x do\\n  1\\n\")"
---
SOURCE_FILE@0..12
  IF_EXPR@0..12
    IF_KW@0..2 "if"
    WHITESPACE@2..3 " "
    NAME_REF@3..4
      IDENT@3..4 "x"
    WHITESPACE@4..5 " "
    DO_KW@5..7 "do"
    BLOCK@7..12
      NEWLINE@7..8 "\n"
      WHITESPACE@8..10 "  "
      LITERAL@10..11
        INT_LITERAL@10..11 "1"
      NEWLINE@11..12 "\n"
  EOF@12..12 ""

errors:
  - expected `end` to close `do` block @12..12
