compiler/mesh-parser/tests/snapshots/parser_tests__error_let_missing_ident.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "block_and_debug(\"let = 5\")"
---
SOURCE_FILE@0..5
  BLOCK@0..5
    LET_BINDING@0..5
      LET_KW@0..3 "let"
      WHITESPACE@3..4 " "
      EQ@4..5 "="

errors:
  - expected identifier or pattern after `let` @4..5
